--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+/* navbar logo */
+.logoname{
+    font-weight: bold;
+}
+
+.ux{
+    color: #FFE01B;
+}
+
