--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: whitesmoke;
 }
 
 /* navbar logo */
@@ -34,18 +35,21 @@ nav{
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 30px 10% 30px 10%;
+    padding: 30px 0% 30px 0%;
     background-color: white;
 }
 
 .lewologo{
     float: left;
-    width: 65%;
+    width: 50%;
+    padding-left: 10%;
 }
 
 .prawologo{
-    float: left;
-    width: 35%;
+    float: right;
+    width: 30%;
+    padding-right: 10%;
+    text-align: right;
 }
 
 /* anti over main */
